# transformer.cu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  main.cpp
include/: embedding.h  encoder.h  encoder_block.h  feed_forward.h  layer_norm.h  matmul.cuh  multi_head_attention.cuh  positional_encoding.h  residual_connection.h  softmax.cuh  transpose.cuh
src/: embedding.cpp  encoder.cpp  encoder_block.cpp  feed_forward.cpp  layer_norm.cpp  matmul.cu  multi_head_attention.cu  positional_encoding.cpp  residual_connection.cpp  softmax.cu  transpose.cu
tests/: main.cpp
